fixed horizontal overflow

--- a/index.css
+++ b/index.css
@@ -14,6 +14,7 @@
   left: 5vw;
   font-family: 'Playfair Display', serif;
   font-size: 3vw;
+  width: 60%;
 }
 
 #page-text {
